Fix navbar font not showing up

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,6 +1,7 @@
 @font-face {
-  font-family: baufra;
-  src: url("../public/assets/Fonts/BaufraBold.ttf");
+  font-family: "baufra";
+  font-style: normal;
+  src: url("./fonts/BaufraBold.ttf") format("truetype");
 }
 
 .main-nav {
